# sf21_22

./: .gitignore  Cargo.toml  LICENSE  README.md  output
chess/src/: board.rs  move_gen.rs  shift.rs
chess/src/board/: mod.rs
chess/src/board/consts/: mod.rs  squares.rs
results/: output
src/: board.rs  bot.rs  consts.rs  lib.rs  main.rs  move_gen.rs  nn.rs  tests.rs
src/bot/: heuristic.rs  mcts_heuristic_bot.rs  mod.rs
src/chess/: board.rs  mod.rs  shift.rs
