[package]
name = "sf21_22"
version = "0.1.0"
edition = "2021"
default-run = "sf21_22"

[profile.release]
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board-game = "0.4.2"
chess = "3.2.0"
decorum = "0.3.1"
internal-iterator = "0.2.0"
rand = "0.8.4"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
